--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="night">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/" />
+    <link rel="icon" type="image/svg+xml" href="/astro.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AstroCode</title>
   </head>
